# PythonAssessmentProject

./: .gitignore  README.md  main.py  pyproject.toml  test.py
src/: EmbeddingModel.py  main.py
