[project]
name = "pythonassessmentproject"
version = "0.1.0"
description = "An API that finds the most similar string from a list of strings."
authors = [
    {name = "mglaser99",email = "melanie.glaser2@uzh.ch"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "transformers (>=5.8.0,<6.0.0)",
    "torch (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
